--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<option value="red">Red</option>
 		<option value="blue">Blue</option>
 		<option value="green">Green</option>
+		<option value="magenta">Magenta</option>
 	</select>
 	<input type="button" value="Add" onclick="addToArray()" />
 	<input type="button" value="Subtract last color" onclick="subtractFromArray()" />
