--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<option value="green">Green</option>
 		<option value="magenta">Magenta</option>
 	</select>
+	<h1>FyrirsÃ¶gn</h1>
 	<input type="button" value="Add" onclick="addToArray()" />
 	<input type="button" value="Subtract last color" onclick="subtractFromArray()" />
 	
@@ -28,7 +29,7 @@
 	<div id="colorBox" onclick="makeColors('colorBox')">
 	</div>
 	<!--
-	<div id="redirect" onclick="redirect()">Opnağu fréttavef af handahófi</div>
+	<div id="redirect" onclick="redirect()">OpnaÃ°u frÃ©ttavef af handahÃ³fi</div>
 	-->
 	
 	
